--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "apexcharts": "^3.28.3",
     "core-js": "^3.6.5",
     "gotrue-js": "^0.9.29",
     "netlify-identity-widget": "^1.9.2",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
